added copyright again

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <li><a href="">Programmes</a></li>
          <li><a href="">Youtube</a></li>
       </ul>
-      <!-- <span class="copyright">@copyright 2055, Jovian</span> -->
+      <span class="copyright">@copyright 2055, Jovian</span>
    </div>
 
    <span class="dre">wonderboy</span>
