--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img id="logo" src="logo.png" alt="logo image">
    </div>
    <img id="banner" src="u.jpg" alt="banner" height="240">
-   <!-- <h1>About Jovian</h1> -->
+   <h1>About Jovian</h1>
    <div id="about">
       <div id="description">
 
